[package]
name = "eos-rust"
version = "0.1.0"
authors = ["datudou <wangqianyi.cs@gmail.com>"]


[workspace]
members = [
    "eos-api",
]

[dependencies]
bytes = "0.4.9"
tokio = "0.1"
futures = "0.1"
hex = "0.3.1"
byteorder = "1"
eos-api = { path = "eos-api" }
clap = {version = "2.32", features = ["yaml"]}



